Iterated VH to resolve spacing

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 
 
 main{
-    min-height: 100vh;
+    min-height: 20vh;
     margin-bottom: -100px;
 }
 
